trunk for 0.3.0
---------------

*Changes that break backwards compatability*
sandbox/output.py -> iolib/table.py
lib/io.py -> iolib/foreign.py (stata data format reader available from iolib)
family -> families
families.links.inverse -> families.links.inverse_power
Datasets' Load class is now load function.

*main changes*
Improved maximum likelihood framework.
Refactor of the datasets sub-package.
Removed RPy dependency for running the test suite.
Refactored the test suite.



trunk for 0.2.0
---------------

*main changes*

 * renames for more consistency
   RLM.fitted_values -> RLM.fittedvalues
   GLMResults.resid_dev -> GLMResults.resid_deviance
 * GLMResults, RegressionResults:
   lazy calculations, convert attributes to properties with _cache
 * fix tests to run without rpy
 * expanded examples in examples directory
 * add PyDTA to lib.io -- functions for reading Stata *.dta binary files
   and converting
   them to numpy arrays
 * made tools.categorical much more robust
 * add_constant now takes a prepend argument
 * fix GLS to work with only a one column design

*new*

 * add four new datasets
    - A dataset from the American National Election Studies (1996)
    - Grunfeld (1950) investment data
    - Spector and Mazzeo (1980) program effectiveness data
    - A US macroeconomic dataset
 * add four new Maximum Likelihood Estimators for models with a discrete
   dependent variables with examples
    - Logit
    - Probit
    - MNLogit (multinomial logit)
    - Poisson

*sandbox*

 * add qqplot in sandbox.graphics
 * add sandbox.tsa (time series analysis) and sandbox.regression (anova)
 * add principal component analysis in sandbox.tools
 * add Seemingly Unrelated Regression (SUR) and Two-Stage Least Squares
   for systems of equations in sandbox.sysreg.Sem2SLS
 * add restricted least squares (RLS)


0.1.0b1
-------
 * initial release